--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,13 @@
 		"jsx": "react-jsx",
 		"esModuleInterop": true,
 		"allowJs": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"skipLibCheck": true
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
 	},
-	"include": ["src"],
+	"include": ["src", "src/global.d.ts"],
 	"exclude": ["node_modules", "dist", "**/*.mjs", "vite.config.ts"]
 }
