Added PupilKeyboard into CustomEditor

--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "@monaco-editor/react": "^4.7.0",
     "monaco-editor": "^0.52.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-simple-keyboard": "^3.8.116"
   },
   "type": "module"
 }
