--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "trailingComma": "none",
-  "printWidth": 100,
-  "tabWidth": 2,
-  "endOfLine": "auto"
+	"semi": false,
+	"singleQuote": true,
+	"trailingComma": "none",
+	"printWidth": 100,
+	"tabWidth": 2,
+	"useTabs": true,
+	"endOfLine": "auto"
 }
