--- a/package.json
+++ b/package.json
@@ -71,12 +71,17 @@
 		"vite": "^7.1.2"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.1",
 		"@monaco-editor/react": "^4.7.0",
+		"@mui/material": "^7.3.2",
+		"@tailwindcss/vite": "^4.1.12",
 		"express": "^5.1.0",
 		"monaco-editor": "^0.52.2",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"react-simple-keyboard": "^3.8.116",
+		"tailwindcss": "^4.1.12",
 		"webgazer": "^3.4.0",
 		"ws": "^8.18.3"
 	},
