Agregado orden para los themes, Tailwind > Material
Material UI cambia entre light y dark

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"@vscode/test-electron": "^2.5.2",
 		"eslint": "^9.32.0",
 		"eslint-plugin-prettier": "^5.5.4",
+		"path": "^0.12.7",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.2"
 	},
