--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
 						"filenamePattern": "*.js"
 					},
 					{
+						"filenamePattern": "*.jsx"
+					},
+					{
+						"filenamePattern": "*.tsx"
+					},
+					{
 						"filenamePattern": "*.ts"
 					},
 					{
@@ -77,6 +83,7 @@
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.1",
 		"@monaco-editor/react": "^4.7.0",
+		"@mui/icons-material": "^7.3.2",
 		"@mui/material": "^7.3.2",
 		"@tailwindcss/vite": "^4.1.12",
 		"express": "^5.1.0",
