Cambiado al guardar archivos

--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
 	"activationEvents": [],
 	"main": "./out/extension.js",
 	"contributes": {
+		"views": {
+			"explorer": []
+		},
 		"commands": [],
+		"menus": {
+			"view/item/context": []
+		},
 		"customEditors": [
 			{
 				"viewType": "pupil.editor",
@@ -79,7 +85,9 @@
 		"@emotion/styled": "^11.14.1",
 		"@monaco-editor/react": "^4.7.0",
 		"@mui/icons-material": "^7.3.2",
+		"@mui/lab": "^7.0.0-beta.17",
 		"@mui/material": "^7.3.2",
+		"@mui/x-tree-view": "^8.11.3",
 		"@tailwindcss/vite": "^4.1.12",
 		"express": "^5.1.0",
 		"monaco-editor": "^0.52.2",
