--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"react-simple-keyboard": "^3.8.116",
+		"react-speech-recognition": "^4.0.1",
 		"tailwindcss": "^4.1.12",
 		"webgazer": "^3.4.0",
 		"ws": "^8.18.3"
