--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
 		"react-speech-recognition": "^4.0.1",
 		"tailwindcss": "^4.1.12",
 		"webgazer": "^3.4.0",
+		"winston": "^3.18.3",
 		"ws": "^8.18.3"
 	},
 	"type": "module"
