--- a/package.json
+++ b/package.json
@@ -61,11 +61,17 @@
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src",
-		"test": "vscode-test",
+		"test": "vitest",
+		"test:ui": "vitest --ui",
+		"test:coverage": "vitest run --coverage",
+		"test:e2e": "vscode-test",
 		"dev": "vite dev --config vite.config.ts",
 		"build": "vite build --config vite.config.ts"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
 		"@types/css-modules": "^1.0.5",
 		"@types/mocha": "^10.0.10",
 		"@types/node": "22.x",
@@ -81,9 +87,11 @@
 		"@vscode/test-electron": "^2.5.2",
 		"eslint": "^9.32.0",
 		"eslint-plugin-prettier": "^5.5.4",
+		"jsdom": "^27.0.0",
 		"path": "^0.12.7",
 		"typescript": "^5.9.2",
-		"vite": "^7.1.2"
+		"vite": "^7.1.2",
+		"vitest": "^3.2.4"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
