--- a/package.json
+++ b/package.json
@@ -62,13 +62,19 @@
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src",
 		"test": "vitest",
-		"test:ui": "vitest --ui",
-		"test:coverage": "vitest run --coverage",
-		"test:e2e": "vscode-test",
+		"test:unit": "vitest",
+		"test:unit:ui": "vitest --ui",
+		"test:unit:coverage": "vitest run --coverage",
+		"test:e2e": "playwright test",
+		"test:e2e:ui": "playwright test --ui",
+		"test:e2e:debug": "playwright test --debug",
+		"test:e2e:report": "playwright show-report",
+		"test:all": "npm run test:unit:coverage && npm run test:e2e",
 		"dev": "vite dev --config vite.config.ts",
 		"build": "vite build --config vite.config.ts"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.56.1",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
@@ -83,6 +89,8 @@
 		"@typescript-eslint/eslint-plugin": "^8.39.0",
 		"@typescript-eslint/parser": "^8.39.0",
 		"@vitejs/plugin-react": "^5.0.0",
+		"@vitest/coverage-v8": "^3.2.4",
+		"@vitest/ui": "^3.2.4",
 		"@vscode/test-cli": "^0.0.11",
 		"@vscode/test-electron": "^2.5.2",
 		"eslint": "^9.32.0",
